--- a/example.conf
+++ b/example.conf
@@ -144,8 +144,13 @@ GUBER_INSTANCE_ID=<unique-id>
 # The address peers will connect too. Defaults to GUBER_ADVERTISE_ADDRESS
 # GUBER_MEMBERLIST_ADVERTISE_ADDRESS=localhost:1051
 
+# The address the memberlist will listen to for TCP and UDP gossip.
+# The default used by memberlist package is 0.0.0.0:7946.
+# GUBER_MEMBERLIST_BIND_ADDRESS=0.0.0.0:7946
+
 # The address the member list will listen to in order to discover other list members.
-# This should be a different port than GUBER_ADVERTISE_ADDRESS
+# This should be a different port than GUBER_ADVERTISE_ADDRESS.
+# Used for nat traversal in the memberlist package.
 # GUBER_MEMBERLIST_ADDRESS=localhost:1051
 
 # This is an initial list or a single domain name that 'member-list' will connect to in order to
